# libretro-android

./: .gitmodules  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/clovero/libretro/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/offile/libretro/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/clovero/libretro/example/: MainActivity.kt
app/src/main/java/com/offile/libretro/: MainActivity.kt
app/src/main/java/com/offile/libretro/example/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/clovero/libretro/: ExampleUnitTest.kt
app/src/test/java/com/offile/libretro/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
libretro/: build.gradle  build.gradle.kts
libretro/src/androidTest/java/com/emulator/libretro/: ExampleInstrumentedTest.kt
libretro/src/androidTest/java/com/offile/libretro/: ExampleInstrumentedTest.kt
libretro/src/main/: AndroidManifest.xml
libretro/src/main/cpp/: CMakeLists.txt  Core.cpp  Core.h  Retro.cpp  RetroJNI.cpp  libretro.cpp
libretro/src/main/cpp/src/: Core.h
libretro/src/main/java/com/emulator/libretro/: NativeLib.kt
libretro/src/main/java/com/offile/libretro/: NativeLib.kt  Retro.kt
libretro/src/test/java/com/emulator/libretro/: ExampleUnitTest.kt
libretro/src/test/java/com/offile/libretro/: ExampleUnitTest.kt
old-retro/src/androidTest/java/com/clovero/libretro/: ExampleInstrumentedTest.kt
old-retro/src/main/: AndroidManifest.xml
old-retro/src/main/cpp/: CMakeLists.txt  Core.cpp  Core.h  Log.h  Retro.cpp  Retro.h  Retro.i  RetroJNI.cpp
old-retro/src/main/java/com/clovero/libretro/: Retro.kt
spotless/: copyright.kt
